compiler/testData/diagnostics/tests/multiplatform/topLevelFun/implWithoutHeader.kt
// !LANGUAGE: +MultiPlatformProjects
// MODULE: m1-jvm
// FILE: jvm.kt

<!IMPLEMENTATION_WITHOUT_HEADER!>actual fun foo()<!> { }
